test/1.2/errors/T_WWRNSTMT.dml
/*
  © 2021-2023 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;

device test;

import "testing.dml";

/// WARNING WEXPERIMENTAL T_WWRNSTMT.dml

method test() -> (bool ok) {
    ok = true;
    /// WARNING WWRNSTMT
    _warning "foo";

    if (false)
        // no warning here
        _warning "foo";
}

method unused() {
    // no warning here
    _warning "foo";
}
